fix overflow layout

--- a/public/common/variables.scss
+++ b/public/common/variables.scss
@@ -14,6 +14,6 @@ $shadow-red: #bf6659;
 $shadow-blue: #584775;
 
 
-$on-medium-screen: only screen and (max-width: 50em);
+$on-medium-screen: only screen and (max-width: 60em);
 $on-small-screen: only screen and (max-width: 30em);
 $on-large-screen: only screen and (min-width: 100em);
